<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">


    <ImageView
        android:id="@+id/igv_logomoody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo23kb" />

    <TextView
        android:id="@+id/txv_wlcTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_title"
        android:gravity="center"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txv_wlcSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/welcome_subtitle"
        android:textSize="16sp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/txv_wlcMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/welcome_message"
        android:textSize="16sp" />

    <Button
        android:id="@+id/btn_signInHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/btn_signIn"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/btn_signUpHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_subscribe"
        android:textColor="@color/purple_primary"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_light"/>



</LinearLayout>