<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"


    android:padding="16dp"
    tools:context=".SignInActivity">


    <TextView
        android:id="@+id/txv_titleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:gravity="center_horizontal"
        android:text="@string/btn_signIn"
        android:textSize="30sp"
        android:textStyle="bold" />


    <ImageView
        android:id="@+id/igv_logomoody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:src="@drawable/logomoody" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_ico_signInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:src="@drawable/ico_google" />

        <Button
            android:id="@+id/btn_signInGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/btn_signGoogle"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/btn_ico_signInAppleID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_apple" />

        <Button
            android:id="@+id/btn_signInAppleID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:text="@string/btn_signAppleID"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edt_signInEmail" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="282dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="10dp"
            android:gravity="start"
            android:hint="Password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="end"
            android:text="@string/btn_showPassword"
            android:textAllCaps="false"
            android:textColor="@color/gray" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/purple_primary"
        android:text="@string/btn_signIn"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_forgotPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/btn_forgotPassword"
        android:textAllCaps="false"
        android:textColor="@color/purple_primary" />

</LinearLayout>