<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"


    android:orientation="vertical"
    android:padding="16dp">


    <TextView
        android:id="@+id/txv_titleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/btn_login"
        android:gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold"
        />


    <ImageView
        android:id="@+id/igv_logomoody"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logomoody"
        android:layout_marginBottom="20dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btn_ico_signInGoogle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ico_google"
            android:layout_marginBottom="12dp"

            android:textColor="@color/black"
            android:textAllCaps="false"
            android:backgroundTint="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signGoogle"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">



    <ImageButton
        android:id="@+id/btn_ico_signInAppleID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ico_apple"
        android:textColor="@color/black"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_signAppleID"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            />

    </LinearLayout>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="Email"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_width="282dp"
            android:layout_height="wrap_content"

            android:layout_marginBottom="40dp"
            android:gravity="start"
            android:hint="Password" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:gravity="end"
            android:text="@string/btn_showPassword"
            android:textAllCaps="false"
            android:textColor="@color/gray" />

    </LinearLayout>


    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_subscribe"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/purple_primary"
        android:layout_marginTop="140dp"/>

    <Button
        android:id="@+id/btn_signUpHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_subscribe"
        android:textColor="@color/purple_primary"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"/>

</LinearLayout>